Header text placed

--- a/main.css
+++ b/main.css
@@ -13,15 +13,8 @@ header {
     background-color: var(--primary-color);
     color: var(--text-color);
     width: 100vw;
-}
-
-.headline {
     display: flex;
-}
-
-.headline h1 {
-    align-self: flex-end;
-    margin-left: 900px;
+    justify-content: space-between;
 }
 
 header button {
